[kcm] decrease snapping area

Displays with only a small difference in size need a smaller amount of
snapping, so the user can still choose wether to top or bottom align.

This especially makes aligning monitors with 1920x1080 and 1920x1200
work.

BUG:365353